# ml-coding

./: README.md  pyproject.toml
ml_coding/algorithms/: decisiontree.py  kmeans.py  knn.py  linearReg.py  logisticReg.py  naivebayes.py
ml_coding/nn/mha/: mha.py
ml_coding/nn/normalization/: layer_norm.py
tests/algorithms/: test_decisiontree.py  test_kmeans.py  test_knn.py  test_linearReg.py  test_logisticregression.py  test_naivebayes.py
tests/nn/normalization/: test_layer_norm.py
