[tool.poetry]
name = "ml-coding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_coding"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "*"
scikit-learn = ">=1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
